--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ input {
 }
 
 button {
-	background-color: #4CAF50;
+	background-color: #ffab00;
 	color: white;
 	padding: 10px 20px;
 	border: none;
@@ -22,7 +22,7 @@ button {
 }
 
 button:hover {
-	background-color: #3e8e41;
+	background-color: #d48e00;
 }
 
 #resultado {
