--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ input {
 
 button {
 	background-color: #ffab00;
-	color: white;
+	color: rgb(0, 0, 0);
 	padding: 10px 20px;
 	border: none;
 	border-radius: 5px;
