--- a/style.css
+++ b/style.css
@@ -29,3 +29,9 @@ button:hover {
 	margin-top: 20px;
 	font-size: 1.5em;
 }
+
+body {
+	background-color: #0a0070; /* cambiar por el color de fondo deseado */
+	color: #000000; /* cambiar por el color de fuente deseado */
+  }
+  
