--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 .container {
-	max-width: 600px;
+	max-width: 650px;
 	margin: 0 auto;
 	text-align: center;
 }
 
 input {
+	background-color: #0a0070;
+	color: rgb(255, 255, 255);
 	padding: 10px;
 	margin-bottom: 10px;
 	border: none;
 	border-radius: 5px;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 0 5px rgba(255, 255, 255, 0.568);
 }
 
 button {
@@ -27,15 +29,18 @@ button:hover {
 
 #resultado {
 	margin-top: 20px;
-	font-size: 1.5em;
+	font-size: 1.2em;
 }
 
 body {
 	background-color: #0a0070; /* cambiar por el color de fondo deseado */
 	color: #ffffff; /* cambiar por el color de fuente deseado */
+	font-size: 1.3em;
   }
 
 h1 {
 	color: #ffab00ed;
+	font-size: 1.9em;
   }
+  
   
