--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h1 {
   }
   
 header {
-	background-image: url("C:/Users/InTeL-PC/Pictures/Upeu Archivos/cp logo indali.png");
+	background-image: url("/Images/cp\ logo\ indali.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	/* otros estilos de la cabecera */
