--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .container {
 	max-width: auto;
 	margin: auto 15px;
-	
+	height: 1000px;
 }
 
 input {
@@ -32,6 +32,7 @@ button:hover {
 #resultado {
 	margin-top: 20px;
 	font-size: 1.2em;
+	text-align: left;
 }
 
 body {
@@ -48,7 +49,7 @@ h1 {
 
 form {
 	margin-top: 50px;
-	text-align: center;
+	text-align: justify;
   }
 
 header {
@@ -78,7 +79,7 @@ footer {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	height: 60px auto;	
+	height: auto;	
   }
 
   /* Estilos para los enlaces del pie de página */
