--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .container {
 	max-width: auto;
-	margin: auto 15px;
+	margin: auto auto;
 	height: 1000px;
 }
 
@@ -41,32 +41,38 @@ body {
 	font-size: 1.3em;
   }
 
-h1 {
-	color: #ffab00ed;
-	font-size: 1.9em;
-	text-align: center;
-  }
 
 form {
-	margin-top: 50px;
-	text-align: justify;
+	margin: 15px;
+	text-align: left;
+	margin-top: 175px
   }
 
 header {
+	background-color: #0a0070;
 	background-image: url('Images/cplogoindali.png');
 	background-size: auto 100%;
 	background-repeat: no-repeat;
 	background-position: left top;
-	text-align: center;
+	position: fixed;
+	top: 0;
 	width: 100%; /* ajustar al ancho completo de la pantalla */
-	height: 110px; /* ajustar la altura del encabezado */
-	/* otros estilos de la cabecera */
+	height: 150px; /* ajustar la altura del encabezado */
+	margin: auto
 }
 
 header img {
+	background-color: #0a0070;
 	height: 100%; /* ajustar la altura del logo para que sea igual a la altura del encabezado */
 	float: left; /* alinear el logo a la izquierda */
 }
+
+h1 {
+	color: #ffab00ed;
+	font-size: 1.9em;
+	text-align: center;
+	padding: 0px 10px;
+  }
 
 /* Estilos para el pie de página */
 footer {
