--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ form {
 
 header {
 	background-color: #0a0070;
-	background-image: url('Images/cplogoindali.png');
+	background-image: url('Images/cplogoindali2.png');
 	background-size: auto 100%;
 	background-repeat: no-repeat;
 	background-position: left top;
