--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ footer {
 	width: 100%;
 	height: 60px;
 	box-shadow: 0 0 3px 3px #ffab00;
-	padding : 0 0 10px 0
+	padding : 0 15px 14px 15px
   }
 
   /* Estilos para los enlaces del pie de página */
