--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 	max-width: auto;
 	margin: auto auto;
 	height: 550px;
-	
 }
 
 input {
@@ -43,9 +42,7 @@ body {
 	background-color: #0a0070; /* cambiar por el color de fondo deseado */
 	color: #ffffff; /* cambiar por el color de fuente deseado */
 	font-size: 1.3em;
-	
   }
-
 
 form {
 	margin: 15px;
@@ -89,6 +86,12 @@ footer {
 	margin-top: auto;
 	margin: auto -8px;
 
+	background-image: url('Images/logoindaligenial.jpg');
+	background-repeat: no-repeat;
+	background-position: right ;
+	background-size: 60px;
+	background-position-x: 95%;
+
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -98,7 +101,7 @@ footer {
   }
 
   /* Estilos para los enlaces del pie de página */
-footer a {
+	footer a {
 	color: #0a0070;
 	text-decoration: none;
 	font-size: auto;
@@ -106,6 +109,7 @@ footer a {
 	
   }
   
-footer a:hover {
+	footer a:hover {
 	text-decoration: underline;
-  }
+}
+  
