--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@ form {
   }
 
 header {
-	background-color: #ffab00;
-	background-image: url('Images/cplogoindali2.png');
+	background-color: #0a0070;
+	background-image: url('Images/cplogoindali.png');
 	background-size: auto 100%;
 	background-repeat: no-repeat;
 	background-position: left top;
@@ -75,36 +75,35 @@ header {
 	}
 
 h1 {
-	color: #0a0070;
+	color: #ffab00;
   }
 
 /* Estilos para el pie de página */
 footer {
-	background-color: #ffab00; /* color de fondo */
-	color: #fff; /* color de texto */
+	background-color: #0a0070; /* color de fondo */
 	text-align: left;
 	margin-top: auto;
-	margin: auto -8px;
+	margin: auto -50px auto -20px;
 
 	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 60px;
 	box-shadow: 0 0 3px 3px #ffab00;
-	padding : 6px 20px 4px 20px
-  }
+	padding : 6px 20px 4px 10px
+  }						
 .footer-container {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	max-width: auto;
-	margin: 0 auto;
+	margin: auto auto;
 }
 
 .footer-logo img {
 	width: 60px;
 	height: auto;
-	margin-right: 75px;
+	margin-right: 50px;
 }
 
 .footer-links {
@@ -112,9 +111,9 @@ footer {
 }
 
 .footer-links a {
-	color: #0a0070;
+	color: #ffab00;
 	text-decoration: none;
-	margin-left: 0;
+	margin-left: 25px;
 }
 
 .footer-links a:hover {
