--- a/style.css
+++ b/style.css
@@ -84,14 +84,17 @@ footer {
 	text-align: left;
 	margin-top: auto;
 	margin: auto -50px auto -20px;
-
+	font-size: 85%;
 	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 60px;
 	box-shadow: 0 0 3px 3px #ffab00;
 	padding : 6px 20px 4px 10px
-  }						
+  }	
+  h2 {
+	text-align: center
+}
 .footer-container {
 	display: flex;
 	justify-content: space-between;
@@ -101,13 +104,14 @@ footer {
 }
 
 .footer-logo img {
-	width: 60px;
+	width: 55px;
 	height: auto;
 	margin-right: 50px;
 }
 
 .footer-links {
-	text-align: left;
+	text-align: Left;
+	
 }
 
 .footer-links a {
