--- a/style.css
+++ b/style.css
@@ -58,32 +58,34 @@ form {
 
 header {
 	background-color: #0a0070;
-	background-image: url('Images/cplogoindali.png');
-	background-size: auto 100%;
-	background-repeat: no-repeat;
-	background-position: left top;
 	box-shadow: 0px 0px 3px 3px #ffab00;
-	text-align: center;
 	position: fixed;
 	top: 0;
-	
+	display: flow-root;
 	font-size: 60%;
-	width: 100%; /* ajustar al ancho completo de la pantalla */
-	height: 100px; /* ajustar la altura del encabezado */
+	width: 100%;
+	height: 100px;
 	margin: 0px -8px;
 	padding: 0px 0 0 0;
-	
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+  }
+header .logo-container {
+	width: 0%; /* ajusta el ancho del contenedor del logo */
 }
-	header img {
-	background-color: #0a0070;
-	height: 50%; /* ajustar la altura del logo para que sea igual a la altura del encabezado */
-	float: left; /* alinear el logo a la izquierda */
-	}
 
+header .logo-container img {
+	height: 90px;
+	width: cover; /* ajusta la altura de la imagen del logo */
+}
 h1 {
 	color: #ffab00;
 	text-size-adjust: auto;
+	text-align: center;
+	flex-grow: 1;
   }
+
 
 /* Estilos para el pie de página */
 footer {
