--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 
 form {
 	margin: 15px;
-	text-align: left;
+	text-align: center;
 	margin-top: 125px;
 
 	display: flow-root;
@@ -61,7 +61,6 @@ header {
 	box-shadow: 0px 0px 3px 3px #ffab00;
 	position: fixed;
 	top: 0;
-	display: flow-root;
 	font-size: 60%;
 	width: 100%;
 	height: 100px;
@@ -70,9 +69,11 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-  }
+	text-align: center; /* agregar esta propiedad */
+}
+
 header .logo-container {
-	width: 0%; /* ajusta el ancho del contenedor del logo */
+	height: cover;
 }
 
 header .logo-container img {
@@ -84,7 +85,9 @@ h1 {
 	text-size-adjust: auto;
 	text-align: center;
 	flex-grow: 1;
+	margin-left: -90px;
   }
+  
 
 
 /* Estilos para el pie de página */
