--- a/style.css
+++ b/style.css
@@ -46,14 +46,21 @@ body {
 
 form {
 	margin: 15px;
-	text-align: center;
+	text-align: left;
 	margin-top: 125px;
-
-	display: flow-root;
-	justify-content: space-between;
-	align-items: center;
 	max-width: auto;
-	
+  }
+  label {
+	display: inline-block;
+	width: 135px;
+	vertical-align: top;
+	text-align: left;
+  }
+  
+  input {
+	display: inline-block;
+	width: 150px;
+	vertical-align: top;
   }
 
 header {
