--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 	
 }
 
+
 input {
 	background-color: #0a0070;
 	color: rgb(255, 255, 255);
@@ -102,8 +103,8 @@ h1 {
 	flex-grow: 1;
 	margin-left: -90px;
 	z-index: 0;
-	font-family: 'IBM Plex Sans';
-	font-style: normal;
+	font-family: 'IBM Plex Sans', sans-serif;
+	font-weight: 400;
   }
   
 
