--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ input {
 button {
 	font-size: 1em;
 	font-family: 'IBM Plex Mono';
+	font-weight: 400;
 	background-color: #0a0070;
 	color: #ffab00;
 	padding: 10px 20px;
@@ -61,6 +62,7 @@ form {
 	vertical-align: top;
 	text-align: left;
 	font-family: 'IBM Plex Sans';
+	font-weight: 4	00;
   }
   
   input {
@@ -68,6 +70,7 @@ form {
 	width: 150px;
 	vertical-align: top;
 	font-family: 'IBM Plex Mono';
+	font-weight: 400;
   }
 
 header {
@@ -104,7 +107,7 @@ h1 {
 	margin-left: -90px;
 	z-index: 0;
 	font-family: 'IBM Plex Sans', sans-serif;
-	font-weight: 400;
+	font-weight: 500;
   }
   
 
@@ -116,12 +119,15 @@ footer {
 	margin-top: auto;
 	margin: auto -50px auto -20px;
 	font-size: 85%;
+	
+
 	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 60px;
 	box-shadow: 0 0 3px 3px #ffab00;
 	padding : 6px 20px 4px 10px
+	
   }	
   h2 {
 	text-align: center
@@ -149,6 +155,8 @@ footer {
 .footer-links p,
 .footer p {
 	line-height: 0.5;
+	letter-spacing: -1.3px;
+	
 }
 
 
@@ -156,8 +164,8 @@ footer {
 	color: #ffab00;
 	text-decoration: none;
 	margin-left: 25px;
-	font-family: "IBM PLex Sans";
-	font-size: 85%;
+	font-family: "IBM PLex Mono";
+	font-weight: 400;
 }
 
 .footer-links a:hover {
