--- a/style.css
+++ b/style.css
@@ -1,19 +1,7 @@
 .container {
 	max-width: auto;
 	margin: auto auto;
-	height: 550px;
-	
-}
-
-
-input {
-	background-color: #0a0070;
-	color: rgb(255, 255, 255);
-	padding: 10px;
-	margin-bottom: 10px;
-	border: none;
-	border-radius: 5px;
-	box-shadow: 0px 0px 2px 2px #ffab00;
+	height: 600px;
 }
 
 button {
@@ -37,41 +25,65 @@ button:hover {
 	box-shadow: 0px 0px 2px 2px #ffb824;
 }
 
-#resultado {
-	margin-top: 20px;
-	font-size: 1.2em;
-	text-align: center;
-	font-family: 'IBM Plex Sans';
-}
+
 
 body {
 	background-color: #0a0070; /* cambiar por el color de fondo deseado */
 	color: #ffffff; /* cambiar por el color de fuente deseado */
 	font-size: 1.3em;
   }
-
-form {
-	margin: 15px;
-	text-align: center;
+  
+.form-container {
 	margin-top: 125px;
-	max-width: auto;
+	display: flex;
+	justify-content: space-between;
   }
-  label {
+  
+form {
+	text-align: center;
+	margin: 0px 0 0 0px;
+	flex-grow: 1;
+  }
+  
+label {
 	display: inline-block;
 	width: 145px;
 	vertical-align: top;
 	text-align: left;
 	font-family: 'IBM Plex Sans';
-	font-weight: 4	00;
+	font-weight: 400;
   }
   
-  input {
+input {
+	background-color: #0a0070;
+	color: rgb(255, 255, 255);
+	padding: 10px;
+	margin-bottom: 10px;
+	border: none;
+	border-radius: 5px;
+	box-shadow: 0px 0px 2px 2px #ffab00;
+
 	display: inline-block;
 	width: 150px;
 	vertical-align: top;
 	font-family: 'IBM Plex Mono';
 	font-weight: 400;
   }
+  
+iframe {
+	width: 47%;
+	height: 400px;
+	float: center;
+	margin-right: 3%;
+  }  
+
+#resultado {
+	margin-top: 20px;
+	font-size: 90%;
+	text-align: center;
+	font-family: 'IBM Plex Sans';
+	white-space: pre-line;
+}
 
 header {
 	background-color: #0a0070;
