--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ footer {
 	width: 100%;
 	height: 60px;
 	box-shadow: 0 0 3px 3px #ffab00;
-	padding : 6px 20px 4px 10px
+	padding : 5px 20px 5px 10px
 	
   }	
   h2 {
@@ -156,6 +156,7 @@ footer {
 	width: 55px;
 	height: auto;
 	margin-right: 50px;
+	margin-top: 5px;
 }
 
 .footer-links {
